hphp/test/slow/compilation/open-rc-check.php.expectf
Fatal error: File not found: %s in %s on line 10
